force-app/main/default/objects/Billing_Account__c/Billing_Account__c.object-meta.xml
<CustomObject>
    <description>This object corresponds to the &apos;Accounts&apos; in SAP ERP, eg Charge Account, Cash Account, etc.</description>
    <label>Billing Account</label>
    <nameField>
        <label>Billing Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>