force-app/main/default/objects/Billing_Account__c/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <description>This is the value obtained from SAP ERP, not derived from the parent Customer record.</description>
    <label>ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>