force-app/main/default/objects/Billing_Account__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <description>phase 2</description>
    <inlineHelpText>It might show Lvl/Suite/Bldg information or an extra name given to the organisation. It’s a field needed by the CDM (Customer Data Management) to link a billing account with an account (organisation).</inlineHelpText>
    <label>Additional Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>