force-app/main/default/objects/Billing_Account__c/fields/BSC_Calc_Transfer_Queue__c.field-meta.xml
<CustomField>
    <fullName>BSC_Calc_Transfer_Queue__c</fullName>
    <formula>IF(Override_BSC__c, BSC_Transfer_Queue__c, Organisation__r.Transfer_Case_Queue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BSC Transfer Queue</label>
    <type>Text</type>
</CustomField>