force-app/main/default/objects/Billing_Account__c/fields/BSC_Transfer_Queue__c.field-meta.xml
<CustomField>
    <fullName>BSC_Transfer_Queue__c</fullName>
    <label>BSC Transfer Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>