force-app/main/default/objects/Billing_Account__c/fields/Calc_Despatch_ID__c.field-meta.xml
<CustomField>
    <fullName>Calc_Despatch_ID__c</fullName>
    <description>StarTrack formula to evaluate Dispatch Id restriction</description>
    <formula>IF(NOT(ISBLANK(Despatch_ID__c)),Despatch_ID__c,  Organisation__r.Dispatch_ID__c)</formula>
    <label>Dispatch ID</label>
    <type>Text</type>
</CustomField>