force-app/main/default/objects/Billing_Account__c/fields/Calc_Redelivery__c.field-meta.xml
<CustomField>
    <fullName>Calc_Redelivery__c</fullName>
    <description>StarTrack formula to evaluate Redelivery restriction</description>
    <formula>IF(NOT(ISBLANK(TEXT(Redelivery__c))), TEXT(Redelivery__c), TEXT(Organisation__r.Redelivery__c))</formula>
    <label>Allows redelivery?</label>
    <type>Text</type>
</CustomField>