force-app/main/default/objects/Billing_Account__c/fields/Credit_Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>Credit_Person_Phone__c</fullName>
    <inlineHelpText>Phone number of the Credit Person associated with the Billing Account.</inlineHelpText>
    <label>Credit Person Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>