force-app/main/default/objects/Billing_Account__c/fields/Credit_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status_Formula__c</fullName>
    <formula>IF(ISBLANK(PAYER_ACCOUNT_ID__c ),  Credit_Status_Image__c ,&quot;NA&quot;)</formula>
    <inlineHelpText>If flag is red then credit is blocked, please contact Credit team. If the flag is green, customer credit status is good.</inlineHelpText>
    <label>Credit Status</label>
    <type>Text</type>
</CustomField>