force-app/main/default/objects/Billing_Account__c/fields/Customer_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_2__c</fullName>
    <label>Billing Account Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>