force-app/main/default/objects/Billing_Account__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <description>DJK 07/10/2011 LOOKS UP CUSTOMER NUMBER FROM ROLE OBJECT VIA ACCOUNT</description>
    <formula>Organisation__r.AccountNumber</formula>
    <label>Customer Number</label>
    <type>Text</type>
</CustomField>