force-app/main/default/objects/Billing_Account__c/fields/Date_ABN_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_ABN_Changed__c</fullName>
    <label>Date ABN Changed</label>
    <type>Date</type>
</CustomField>