force-app/main/default/objects/Billing_Account__c/fields/Date_Parent_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_Parent_Changed__c</fullName>
    <description>Date to be filled in via code when the Customer is changed.</description>
    <label>Date Customer Changed</label>
    <type>DateTime</type>
</CustomField>