force-app/main/default/objects/Billing_Account__c/fields/Date_State_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_State_Changed__c</fullName>
    <label>Date State Changed</label>
    <type>Date</type>
</CustomField>