force-app/main/default/objects/Billing_Account__c/fields/Date_Street_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_Street_Changed__c</fullName>
    <description>Phase 2</description>
    <label>Date Street Changed</label>
    <type>Date</type>
</CustomField>