force-app/main/default/objects/Billing_Account__c/fields/Depot_Collection__c.field-meta.xml
<CustomField>
    <fullName>Depot_Collection__c</fullName>
    <label>Allows depot collection?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Sender authorisation required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>