force-app/main/default/objects/Billing_Account__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Email address of the billing account.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>