force-app/main/default/objects/Billing_Account__c/fields/Exclude_Notification_Automation__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Notification_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will determine if a case record will be excluded in the automated notification.</description>
    <label>Exclude Auto Customer Notification</label>
    <type>Checkbox</type>
</CustomField>