force-app/main/default/objects/Billing_Account__c/fields/Is_POD_Required_to_Close_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_POD_Required_to_Close_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox field will determine if the cases related to this billing account will check for POD before closing the case or not.</description>
    <inlineHelpText>This checkbox field will determine if the cases related to this billing account will check for POD before closing the case or not.</inlineHelpText>
    <label>Is POD Required to Close Case?</label>
    <type>Checkbox</type>
</CustomField>