force-app/main/default/objects/Billing_Account__c/fields/LeaderAccount__c.field-meta.xml
<CustomField>
    <fullName>LeaderAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the billing account where contract rates are held (Leader). Currently only used by StarTrack billing accounts (mastered in TEAM).</description>
    <inlineHelpText>Billing Account where the contract rates are held in TEAM</inlineHelpText>
    <label>Leader Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Sub Accounts (Followers and Offsprings)</relationshipLabel>
    <relationshipName>FollowerOffspringAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>