force-app/main/default/objects/Billing_Account__c/fields/LEGACY_ID__c.field-meta.xml
<CustomField>
    <fullName>LEGACY_ID__c</fullName>
    <externalId>true</externalId>
    <label>Billing Account No.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>