force-app/main/default/objects/Billing_Account__c/fields/MLID__c.field-meta.xml
<CustomField>
    <fullName>MLID__c</fullName>
    <description>This will store the Merchant Location Id value.</description>
    <inlineHelpText>This will store the Merchant Location Id value.</inlineHelpText>
    <label>MLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>