force-app/main/default/objects/Billing_Account__c/fields/PAYER_ACCOUNT_ID__c.field-meta.xml
<CustomField>
    <fullName>PAYER_ACCOUNT_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identify the SAP ERP Head Office (Payer) Account number.</inlineHelpText>
    <label>Payer Account ID</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Billing_Account__c.Organisation__c</field>
            <operation>equals</operation>
            <valueField>$Source.Organisation__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Sub Accounts</relationshipLabel>
    <relationshipName>Billing_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>