force-app/main/default/objects/Billing_Account__c/fields/Priority_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Priority_Start_Date__c</fullName>
    <description>Priority Start Date</description>
    <label>Priority Start Date</label>
    <type>Date</type>
</CustomField>