force-app/main/default/objects/Billing_Account__c/fields/Redelivery__c.field-meta.xml
<CustomField>
    <fullName>Redelivery__c</fullName>
    <description>Override Customer Account level restriction</description>
    <inlineHelpText>Override Customer Account level restriction</inlineHelpText>
    <label>Allows redelivery?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Sender authorisation required</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>