force-app/main/default/objects/Billing_Account__c/fields/SAP_marked_for_deletion__c.field-meta.xml
<CustomField>
    <fullName>SAP_marked_for_deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked for deletion</label>
    <type>Checkbox</type>
</CustomField>