force-app/main/default/objects/Billing_Account__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>PeopleSoft
TEAM</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PeopleSoft</fullName>
            </value>
            <value>
                <fullName>SAP ERP</fullName>
                <default>true</default>
                <label>SAP ERP</label>
            </value>
            <value>
                <fullName>TEAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>