force-app/main/default/objects/Billing_Account__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Customers by account type. Values are: CUST, CASH and AGCY</inlineHelpText>
    <label>Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>