force-app/main/default/objects/Billing_Account__c/validationRules/Billing_Account_Num_Readonly.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Account_Num_Readonly</fullName>
    <active>true</active>
    <description>Phase - The Name field (Billing Account#) can not be made readonly or removed from the page layout.  Therefore validation rule needs to be created to ensure Billin Account is not changed.</description>
    <errorConditionFormula>ISCHANGED( Name ) &amp;&amp; NOT(ISNEW()) &amp;&amp;  $Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;Australia Post - Integration&apos;  &amp;&amp;  $Profile.Name  &lt;&gt; &apos;AusPost Integration&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;AP Integration&apos;</errorConditionFormula>
    <errorMessage>You are not allowed to edit the Billing Account Number</errorMessage>
</ValidationRule>