force-app/main/default/objects/Billing_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PAYER_ACCOUNT_ID__c</columns>
    <columns>Credit_Limit_Formula__c</columns>
    <columns>Organisation__c</columns>
    <columns>LEGACY_ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Lane</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>