force-app/main/default/objects/Billing_Account__c/listViews/Date_Customer_Changed.listView-meta.xml
<ListView>
    <fullName>Date_Customer_Changed</fullName>
    <columns>Date_Parent_Changed__c</columns>
    <columns>NAME</columns>
    <columns>PAYER_ACCOUNT_ID__c</columns>
    <columns>Credit_Limit_Formula__c</columns>
    <columns>Organisation__c</columns>
    <columns>LEGACY_ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Parent_Changed__c</field>
        <operation>equals</operation>
    </filters>
    <label>Date Customer Changed</label>
</ListView>