force-app/main/default/objects/Billing_Account__c/listViews/Tas_Unassigned_Billing_Accounts.listView-meta.xml
<ListView>
    <fullName>Tas_Unassigned_Billing_Accounts</fullName>
    <columns>NAME</columns>
    <columns>PAYER_ACCOUNT_ID__c</columns>
    <columns>Credit_Limit_Formula__c</columns>
    <columns>Credit_Person__c</columns>
    <columns>Credit_Person_Code__c</columns>
    <columns>Organisation__c</columns>
    <columns>Customer_Name_2__c</columns>
    <columns>LEGACY_ID__c</columns>
    <columns>Search_Term__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Organisation__c</field>
        <operation>equals</operation>
        <value>TEMPORARY CUSTOMER</value>
    </filters>
    <filters>
        <field>State_Allocation__c</field>
        <operation>equals</operation>
        <value>Tas</value>
    </filters>
    <label>Tas Unassigned Billing Accounts</label>
</ListView>